// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callout block renders callout with emoji and children 1`] = `
<div>
  <div
    class="reark-callout reark-callout--custom"
    style="background-color: rgb(217, 245, 214); border: 1px solid #8ee085; border-radius: 8px;"
  >
    <div
      class="reark-callout__emoji"
    >
      😇
    </div>
    <div
      class="reark-callout__content"
    >
      <div
        class="reark-comment"
        data-comment-ids="7500751511807328290,7500745624808063009"
      >
        <div
          class="reark-block"
        >
          <div
            class="reark-heading reark-heading--3"
          >
            <div
              class="reark-text-block"
              style="text-align: left;"
            >
              <span
                class="reark-text"
              >
                コー
              </span>
              <div
                class="reark-comment"
                data-comment-ids="7500745624808063009"
              >
                <span
                  class="reark-text"
                >
                  ル
                </span>
              </div>
              <div
                class="reark-comment"
                data-comment-ids="7500751511807328290"
              >
                <span
                  class="reark-text"
                >
                  ア
                </span>
              </div>
              <span
                class="reark-text"
              >
                ウト
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="reark-block"
      >
        <div
          class="reark-unordered-list"
        >
          <div
            class="reark-text-block"
            style="text-align: left;"
          >
            <span
              class="reark-text"
            >
              ネスト
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Callout block renders callout with emoji and children 2`] = `
<div>
  <div
    class="reark-callout reark-callout--custom"
    style="background-color: rgb(217, 245, 214); border: 1px solid #8ee085; border-radius: 8px;"
  >
    <div
      class="reark-callout__emoji"
    >
      😇
    </div>
    <div
      class="reark-callout__content"
    >
      <div
        class="reark-comment"
        data-comment-ids="7500751511807328290,7500745624808063009"
      >
        <div
          class="reark-block"
        >
          <div
            class="reark-heading reark-heading--3"
          >
            <div
              class="reark-text-block"
              style="text-align: left;"
            >
              <span
                class="reark-text"
              >
                コー
              </span>
              <div
                class="reark-comment"
                data-comment-ids="7500745624808063009"
              >
                <span
                  class="reark-text"
                >
                  ル
                </span>
              </div>
              <div
                class="reark-comment"
                data-comment-ids="7500751511807328290"
              >
                <span
                  class="reark-text"
                >
                  ア
                </span>
              </div>
              <span
                class="reark-text"
              >
                ウト
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="reark-block"
      >
        <div
          class="reark-unordered-list"
        >
          <div
            class="reark-text-block"
            style="text-align: left;"
          >
            <span
              class="reark-text"
            >
              ネスト
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders callout with no children 1`] = `
<div>
  <div
    class="reark-callout reark-callout--custom"
    style="background-color: rgb(217, 245, 214); border: 1px solid #8ee085; border-radius: 8px;"
  >
    <div
      class="reark-callout__emoji"
    >
      😇
    </div>
    <div
      class="reark-callout__content"
    />
  </div>
</div>
`;

exports[`renders callout with no children 2`] = `
<div>
  <div
    class="reark-callout reark-callout--custom"
    style="background-color: rgb(217, 245, 214); border: 1px solid #8ee085; border-radius: 8px;"
  >
    <div
      class="reark-callout__emoji"
    >
      😇
    </div>
    <div
      class="reark-callout__content"
    />
  </div>
</div>
`;
